tests/api/reference/negative/06-invalid-label-name.asm
label.define("not a label")
